материалы 2-го занятия: flex, position

--- a/pracitce_01_intro/index.html
+++ b/pracitce_01_intro/index.html
@@ -9,11 +9,16 @@
 <body>
     <main>
         <section>
-            <h2>Just a header</h2>
+            <h2 class="headerStyle">Just a header</h2>
             <h3>Also header, but lower level</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id fugit nobis explicabo vel iusto. Optio totam aperiam illo! Voluptatem recusandae, velit voluptate quibusdam delectus expedita iure natus ad excepturi nemo?</p>
 
-            <button class="button">Button. Only button.</button>
+            <button class="buttonStyle">Button. Only button.</button>
+
+            <div class="centeredContainer">
+                <p>Simple text</p>
+                <div class="circle"></div>
+            </div>
         </section>
     </main>
 </body>
