--- a/practice_02_flex/index.html
+++ b/practice_02_flex/index.html
@@ -17,7 +17,10 @@
         <div class="boxesContainer">
             <div class="box box1">1</div>
             <div class="box box2">2</div>
-            <div class="box box3">3</div>
+            <div class="box box3">
+                <div class="redBox leftBlock"></div>
+                <div class="redBox rightBlock"></div>
+            </div>
         </div>
     </main>
 </body>
