--- a/practice_03_flex/index.html
+++ b/practice_03_flex/index.html
@@ -21,7 +21,23 @@
                 <div class="redBox leftBlock"></div>
                 <div class="redBox rightBlock"></div>
             </div>
+            <div class="box box1">1</div>
+            <div class="box box2">2</div>
+            <div class="box box1">1</div>
+            <div class="box box2">2</div>
         </div>
+
+        <form class="registerForm">
+            <h2>Register Form</h2>
+            <p>Create an account to enjoy all the services without any ads for free!</p>
+            <input type="text" placeholder="Login">
+            <input type="text" placeholder="Password">
+            <button>Create Account</button>
+            <div>
+                <p>Already have an account?</p>
+                <a href="#">Sign in!</a>
+            </div>
+        </form>
     </main>
 </body>
 </html>
