--- a/practice_06_grid_advanced/index.html
+++ b/practice_06_grid_advanced/index.html
@@ -13,64 +13,65 @@
 
 </head>
 <body>
-    <main class="mainContainer">
-         <div class="product-container">
-            <div class="product-card">
-                <img src="./assets/ball.jpeg" class="product-img" />
-                <h3 class="product-name">Ball</h3>
-                <div class="product-info">
-                    <p class="product-category">Sport</p>
-                    <p class="product-price">100</p>
-                </div>
-                <p class="product-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis quos velit rem, sit explicabo hic voluptatem exercitationem consectetur perferendis asperiores ut fugit et fuga atque animi nemo quidem id eum!</p>
-            </div>
-            <div class="product-card">
-                <img src="./assets/saw.jpeg" class="product-img" />
-                <h3 class="product-name">Saw</h3>
-                <div class="product-info">
-                    <p class="product-category">Sport</p>
-                    <p class="product-price">100</p>
-                </div>
-                <p class="product-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis quos velit rem, sit explicabo hic voluptatem exercitationem consectetur perferendis asperiores ut fugit et fuga atque animi nemo quidem id eum!</p>
-            </div>
-            <div class="product-card">
-                <img src="./assets/shark.jpeg" class="product-img" />
-                <h3 class="product-name">Shark</h3>
-                <div class="product-info">
-                    <p class="product-category">Sport</p>
-                    <p class="product-price">100</p>
-                </div>
-                <p class="product-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis quos velit rem, sit explicabo hic voluptatem exercitationem consectetur perferendis asperiores ut fugit et fuga atque animi nemo quidem id eum! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis quos velit rem, sit explicabo hic voluptatem exercitationem consectetur perferendis asperiores ut fugit et fuga atque animi nemo quidem id eum!</p>
-            </div>
-            <div class="product-card">
-                <img src="./assets/hammer.jpeg" class="product-img" />
-                <h3 class="product-name">Hammer</h3>
-                <div class="product-info">
-                    <p class="product-category">Sport</p>
-                    <p class="product-price">100</p>
-                </div>
-                <p class="product-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
-            </div>
-            <div class="product-card">
-                <img src="./assets/gloves.jpg" class="product-img" />
-                <h3 class="product-name">Gloves</h3>
-                <div class="product-info">
-                    <p class="product-category">Sport</p>
-                    <p class="product-price">100</p>
-                </div>
-                <p class="product-description">Lorem </p>
-            </div>
-            <div class="product-card">
-                <img src="./assets/truck.jpeg" class="product-img" />
-                <h3 class="product-name">Truck</h3>
-                <div class="product-info">
-                    <p class="product-category">Sport</p>
-                    <p class="product-price">100</p>
-                </div>
-                <p class="product-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis quos velit rem, sit explicabo hic voluptatem exercitationem consectetur perferendis asperiores ut fugit et fuga atque animi nemo quidem id eum!</p>
+   <div class="intro">
+    <div class="infoLine">Achetez Meti au 20 rue des Martyrs Paris 9</div>
+    <nav class="mainNav">
+        <ul class="navList primaryList">
+            <li><a href="#">OPTIQUES</a></li>
+            <li><a href="#">SOLARIES</a></li>
+            <li><a href="#">VOIS JUSTE</a></li>
+        </ul>
+        <ul class="navList secondaryList">
+            <li><a href="#">WISHLIST</a></li>
+            <li><a href="#">EXAMEN DE VUE</a></li>
+            <li><a href="#">PANIER</a></li>
+        </ul>
+    </nav>
+    <div class="introContent">
+
+    </div>
+   </div>
+
+   <div class="mainContent">
+    <div class="mainContentLeft">
+        <div class="mainContentCard">
+            <img src="./assets/img1.png"/>
+            <div class="mainContentPrice">
+                <p class="mainContentCardText">Kraftt</p>
+                <p class="mainContentCardText">140$</p>
             </div>
         </div>
-    -->
-    </main>
+    </div>
+    <div class="mainContentRight">
+        <div class="mainContentCard">
+            <img src="./assets/img1.png"/>
+            <div class="mainContentPrice">
+                <p class="mainContentCardText">Kraftt</p>
+                <p class="mainContentCardText">140$</p>
+            </div>
+        </div>
+        <div class="mainContentCard">
+            <img src="./assets/img1.png"/>
+            <div class="mainContentPrice">
+                <p class="mainContentCardText">Kraftt</p>
+                <p class="mainContentCardText">140$</p>
+            </div>
+        </div>
+        <div class="mainContentCard">
+            <img src="./assets/img1.png"/>
+            <div class="mainContentPrice">
+                <p class="mainContentCardText">Kraftt</p>
+                <p class="mainContentCardText">140$</p>
+            </div>
+        </div>
+        <div class="mainContentCard">
+            <img src="./assets/img1.png"/>
+            <div class="mainContentPrice">
+                <p class="mainContentCardText">Kraftt</p>
+                <p class="mainContentCardText">140$</p>
+            </div>
+        </div>
+    </div>
+   </div>
 </body>
 </html>
