--- a/practice_08_css_selectors/index.html
+++ b/practice_08_css_selectors/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
    <div class="intro">
-    <div class="infoLine">Achetez Meti au 20 rue des Martyrs Paris 9</div>
+    <div class="infoLine">Здесь может быть Ваша реклама!</div>
     <div class="burgerMenuContainer">
         <input type="checkbox" class="burgerMenuItem" />
         <span id="item0"></span>
@@ -24,14 +24,14 @@
     </div>
     <nav class="mainNav">
         <ul class="navList primaryList">
-            <li><a href="#">OPTIQUES</a></li>
-            <li><a href="#">SOLARIES</a></li>
-            <li><a href="#">VOIS JUSTE</a></li>
+            <li><a href="#">Для зрения</a></li>
+            <li><a href="#">От солнца</a></li>
+            <li><a href="#">Стильное</a></li>
         </ul>
         <ul class="navList secondaryList">
-            <li><a href="#">WISHLIST</a></li>
-            <li><a href="#">EXAMEN DE VUE</a></li>
-            <li><a href="#">PANIER</a></li>
+            <li><a href="#">Избранное</a></li>
+            <li><a href="#">Проверьте зрение</a></li>
+            <li><a href="#">Оформить</a></li>
         </ul>
     </nav>
     <div class="introContent">
@@ -42,7 +42,7 @@
 
    <div class="mainContent">
     <div class="mainContentLeft">
-        <div class="mainContentCard">
+        <div class="mainContentCard" data-discount="0.4">
             <img src="./assets/img1.png"/>
             <div class="mainContentPrice">
                 <p class="mainContentCardText">Kraftt</p>
@@ -51,21 +51,21 @@
         </div>
     </div>
     <div class="mainContentRight">
-        <div class="mainContentCard">
+        <div class="mainContentCard krafted">
             <img src="./assets/img1.png"/>
             <div class="mainContentPrice">
                 <p class="mainContentCardText">Kraftt</p>
                 <p class="mainContentCardText">140$</p>
             </div>
         </div>
-        <div class="mainContentCard">
+        <div class="mainContentCard krafted">
             <img src="./assets/img1.png"/>
             <div class="mainContentPrice">
                 <p class="mainContentCardText">Kraftt</p>
                 <p class="mainContentCardText">140$</p>
             </div>
         </div>
-        <div class="mainContentCard">
+        <div class="mainContentCard" data-discount="0.7">
             <img src="./assets/img1.png"/>
             <div class="mainContentPrice">
                 <p class="mainContentCardText">Kraftt</p>
