--- a/practice_09_js_basics/index.html
+++ b/practice_09_js_basics/index.html
@@ -14,7 +14,12 @@
 </head>
 <body>
     <div class="main">
-
+        <input id="numberFirst" type="text" />
+        <input id="numberSecond" type="text" />
+        <button onclick="handleAddBtnClick()" id="addBtn">Add</button>
+        <button onclick="handleSubtractBtnClick()" id="subtractBtn">Subtract</button>
+        <button id="multiplyBtn">Multiply</button>
+        <button id="divideBtn">Divide</button>
     </div>
     <script src="./scripts/main.js"></script>
 </body>
