--- a/practice_12_js_loops/index.html
+++ b/practice_12_js_loops/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
-    <title>Practice_11</title>
+    <title>Practice_12</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,14 +14,12 @@
 </head>
 <body>
     <div class="main">
-        <input id="experienceInput" type="text"/>
-        <button id="experienceBtn" onclick="checkExperience()">Get position</button>
-        <button id="bonusBtn" onclick="calculateBonus()">Get bonus</button>
-
-        <div class="machineBlock">
-            <h3>Buy some junk food here!</h3>
-            <input type="text" id="machineInput"/>
-            <button onclick="putCoin()">Put the Coin!</button>
+        <h3>Тема занятия</h3>
+        <p>Условные операторы, циклы.</p>
+        <p>Массивы и некоторые методы массивов</p>
+        <div>
+            <p>Это простой параграф</p>
+            <p>Еще один простой подопытный параграф</p>
         </div>
     </div>
     <script src="./scripts/main.js"></script>
