practice 18 Objects, localStorage

--- a/practice_17_js_events/index.html
+++ b/practice_17_js_events/index.html
@@ -17,6 +17,8 @@
         <h2>Events</h2>
         <input id="testInput" type="text"/>
         <button id="testButton">Test Button</button>
+        <input type="checkbox" id="checkbox"/>
+        <label for="checkbox">Turn on/off validation</label>
     </div>
     <script src="./scripts/main.js"></script>
 </body>
