practice 21 fetch, promises

--- a/practice_21_js_fetch_promise/index.html
+++ b/practice_21_js_fetch_promise/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
-    <title>Practice_18</title>
+    <title>Practice_21</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,20 +14,9 @@
 </head>
 <body>
     <div class="main">
-        <h2>Objects, localStorage</h2>
-        <div id="timerBlock">
-            <input id="timerInput" type="text" placeholder="Timer value" />
-            <button id="timerStartBtn">Start!</button>
-            <button id="timerCancelBtn">Cancel!</button>
-        </div>
+        <h2>Promises, fetch</h2>
 
-        <h3 id="currentDateTimeText"></h3>
-
-        <div id="simpleCounterContainer">
-            <p id="counterValueText">0</p>
-            <button id="counterStartBtn">Start</button>
-            <button id="counterStopBtn">Stop</button>
-        </div>
+        <div class="productsContainer"></div>
     </div>
     <script src="./scripts/main.js"></script>
 </body>
