--- a/practice_21_js_fetch_promise/index.html
+++ b/practice_21_js_fetch_promise/index.html
@@ -15,7 +15,8 @@
 <body>
     <div class="main">
         <h2>Promises, fetch</h2>
-
+        <div class="loader">Please, wait!!!</div>
+        <select id="categoriesSelect"></select>
         <div class="productsContainer"></div>
     </div>
     <script src="./scripts/main.js"></script>
